--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: Roboto;
-  src: url('../fonts/roboto-500.woff2') format("woff");
+  src: url('../fonts/roboto-300.woff2') format("woff2");
   font-display:swap;
   font-stretch: normal;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url('../fonts/roboto-400.woff2') format("woff");
+  src: url('../fonts/roboto-400.woff2') format("woff2");
   font-display:swap;
   font-stretch: normal;
   font-style: normal;
@@ -20,11 +20,11 @@
 
 @font-face {
   font-family: Roboto;
-  src: url('../fonts/roboto-300.woff2') format("woff");
+  src: url('../fonts/roboto-500.woff2') format("woff2");
   font-display:swap;
   font-stretch: normal;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 /* modal */
